--- a/views/mystyle.css
+++ b/views/mystyle.css
@@ -1,14 +1,31 @@
-.is-hidden {
-    display: none;
-  }
-  
-  .btn {
-    background: #ccc;
-    border-radius: 3px;
-    display: inline-block;
-    padding: 5px;
-  }
-  
-  body {
-    padding: 40px;
-  }
+body {
+  padding: 40px;
+  background-color: #fffdf9;
+}
+
+.hyperlink-row {
+  padding-bottom: 3px;
+}
+
+h1 {
+  font-family: 'Helvetica', 'Arial', sans-serif;
+}
+
+h2 {
+  font-family: 'Arial', 'Helvetica', sans-serif;
+}
+
+a {
+
+}
+
+a:hover {
+  color: rgb(28, 58, 156);
+}
+
+
+
+/* a:visited { } Visited links.
+a:hover { } The user mouses over a link.
+a:focus { } The user clicks on a link.
+a:active { } The user has clicked a link. */
