--- a/views/mystyle.css
+++ b/views/mystyle.css
@@ -15,17 +15,10 @@ h2 {
   font-family: 'Arial', 'Helvetica', sans-serif;
 }
 
-a {
-
-}
-
 a:hover {
   color: rgb(28, 58, 156);
 }
 
-
-
-/* a:visited { } Visited links.
-a:hover { } The user mouses over a link.
-a:focus { } The user clicks on a link.
-a:active { } The user has clicked a link. */
+a:visited { 
+  color: #0000EE; 
+}
