added starting page. Fixed Unsaving issue

--- a/views/mystyle.css
+++ b/views/mystyle.css
@@ -22,3 +22,12 @@ a:hover {
 a:visited { 
   color: #0000EE; 
 }
+
+.center {
+  text-align: center;
+  padding-top: 12%;
+}
+
+@media (max-width: 800px) {
+  /* CSS that should be displayed if width is equal to or less than 800px goes here */
+}
