--- a/views/about.hbs
+++ b/views/about.hbs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="../views/mystyle.css">
-    <title>My Reddit Saved</title>
+    <title>Reddit Saved</title>
 </head>
 <body>
     <p id="demo"></p>
@@ -16,10 +16,17 @@
         </div>
     {{/each}}
 
+
+    {{!-- {{#if !hasPosts}}
+        {{#if !hasComments}}
+            <h1>Your account has nothing saved :(</h1>  
+        {{/if}}   
+    {{/if}}    --}}
     
     <br>
     <br>
     <br>    
+
 
     {{#if hasPosts}}
         <h1>Saved Reddit Posts</h2>  
