finally fixing the subreddit list.. leaving logs and comments in since it has been awhile

--- a/views/mystyle.css
+++ b/views/mystyle.css
@@ -28,6 +28,12 @@ a:visited {
   padding-top: 12%;
 }
 
-@media (max-width: 800px) {
-  /* CSS that should be displayed if width is equal to or less than 800px goes here */
+.container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.child {
+  margin-right: 25px;
+  margin-bottom: 10px
 }
