--- a/views/saved.hbs
+++ b/views/saved.hbs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../views/mystyle.css">
     <title>Reddit Saved</title>
 </head>
@@ -12,7 +13,7 @@
     <div class="container">
         {{#each subreddits}}  
             <span class="child">
-                <a href="#{{this}}">{{this}}</a>
+                <button onclick="jqueryScrollDown('{{this}}')">{{this}}</button >
             </span>
         {{/each}}
     </div>
